examples/test/testpolicy2086.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2086
  namespace: namespace162
spec:
  podSelector:
    matchLabels:
      key13: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value41
          key17: value23
      podSelector:
        matchLabels:
          key33: value1
          key11: value15
